styles.css
header{
  text-align: center;
  width: 100%;
  height: 100%;
  background-color: #009688;
}

.header h1{
  text-align: center;
  color: white;
  text-transform: uppercase;
  font-weight: 500;
}

.header h2{
  text-align: center;
  color: white;
  text-transform: uppercase;
  font-weight: 500;
}

a:link,a:visited{
  color: green;
  cursor: pointer;
  text-decoration: none;
  padding: auto;
}

.links1 ul{
  text-align: center;
}

.links1 li{
  border: 0;
  background: none;
  display: inline-block;
  margin: 20px auto;
  text-align: center;
  padding: 14px 20px;
  border: 2px solid #00BCD4;
  padding: 14px 10px;
  width: 100px;
  outline: none;
  color: white;
  border-radius: 24px;
  transition: 0.25s;
}

.links1 li:focus{
width: 200px;
border-color: rgb(64, 221, 85);
}

.links2 li{
  border: 0;
  background: none;
  display: inline-block;
  margin: 20px auto;
  text-align: center;
  padding: 14px 20px;
  border: 2px solid #00BCD4;
  padding: 14px 10px;
  width: 100px;
  outline: none;
  color: white;
  border-radius: 24px;
  transition: 0.25s;
}

.links2 li:hover{
  width: 200px;
  border-color: rgb(64, 221, 85);
  }

  body{
    text-align: center;
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
    background: #009688;
  }

